feat: add git context updating (#459)
