# pkg/api/docs/swagger.json
@@ -1156,6 +1156,23 @@
                 }
             }
         },
+        "FileStatus": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "staging": {
+                    "$ref": "#/definitions/Status"
+                },
+                "worktree": {
+                    "$ref": "#/definitions/Status"
+                }
+            }
+        },
         "GitBranch": {
             "type": "object",
             "properties": {
@@ -1235,6 +1252,20 @@
                 },
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "GitStatus": {
+            "type": "object",
+            "properties": {
+                "currentBranch": {
+                    "type": "string"
+                },
+                "fileStatus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/FileStatus"
+                    }
                 }
             }
         },
@@ -1332,6 +1363,9 @@
         "ProjectState": {
             "type": "object",
             "properties": {
+                "gitStatus": {
+                    "$ref": "#/definitions/GitStatus"
+                },
                 "updatedAt": {
                     "type": "string"
                 },
@@ -1419,10 +1453,36 @@
         "SetProjectState": {
             "type": "object",
             "properties": {
+                "gitStatus": {
+                    "$ref": "#/definitions/GitStatus"
+                },
                 "uptime": {
                     "type": "integer"
                 }
             }
+        },
+        "Status": {
+            "type": "string",
+            "enum": [
+                "Unmodified",
+                "Untracked",
+                "Modified",
+                "Added",
+                "Deleted",
+                "Renamed",
+                "Copied",
+                "Updated but unmerged"
+            ],
+            "x-enum-varnames": [
+                "Unmodified",
+                "Untracked",
+                "Modified",
+                "Added",
+                "Deleted",
+                "Renamed",
+                "Copied",
+                "UpdatedButUnmerged"
+            ]
         },
         "Workspace": {
             "type": "object",
